--- a/components/ProductTeaser/ProductTeaser.module.css
+++ b/components/ProductTeaser/ProductTeaser.module.css
@@ -1,15 +1,11 @@
 .wrapper {
-        border: 1px solid black;
         cursor: pointer;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
         transition: all 300ms;
     }
 .wrapper:hover{
     transform: scale(1.02);
 }
-.image{
-    width: 200px;
+#image{
+    height: 200px;
+    background-size: contain;
 }
