--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -1,12 +1,12 @@
 .wrapper{
     width: 100%;
-    position: fixed;
+    top: 0;
+    position: sticky;
     background-color: white;
-    border-bottom: 1px solid black;
     display: flex;
+    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
 }
-.wrapper > ul {
-    list-style-type: none;
+.linkWrapper {
     margin: 0;
     padding: 0;
     display: flex;
@@ -17,15 +17,15 @@
 
 .item{
     padding: 0 50px;
-    border: 1px solid black;
     margin: 2px;
+    cursor: pointer;
 }
 
 .item:hover {
-    background-color: black;
-    color: white;
+    border-bottom: 3px solid black;
 }
 
 .cartbutton{
     margin-right: 10px;
 }
+
