--- a/components/ShopPage/ShopPage.module.css
+++ b/components/ShopPage/ShopPage.module.css
@@ -1,3 +1,21 @@
 .wrapper{
     padding: 0 20px;
 }
+.filterWrapper{
+    padding: 10px 0;
+    z-index: 1;
+}
+.searchWrapper{
+    display: flex;
+    width: 100%;
+}
+.searchBar{
+    width: 100%;
+}
+.checkBox{
+    padding: 0 5px;
+    margin-right: 10px;
+}
+.checkBoxWrapper{
+    margin: 10px 0
+}
