--- a/components/ProductFinderPage/ProductFinderPage.module.css
+++ b/components/ProductFinderPage/ProductFinderPage.module.css
@@ -3,4 +3,15 @@
 }
 .paper{
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.evaluation{
+    margin-top: 100px;
+}
+.card{
+    cursor: pointer;
+}
+.grid{
+    margin-top: 20px;
 }
