--- a/components/ProductTeaser/ProductTeaser.module.css
+++ b/components/ProductTeaser/ProductTeaser.module.css
@@ -1,9 +1,12 @@
 .wrapper {
         cursor: pointer;
         transition: all 300ms;
+        text-align: center;
+        height: 100%;
+        align-items: baseline;
     }
 .wrapper:hover{
-    transform: scale(1.02);
+    box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%);
 }
 #image{
     height: 200px;
