--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #E7F8FF;
 }
 
 a {
@@ -13,4 +14,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+main{  
+  width: 1400px;
+  margin: auto;
 }
