--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -1,11 +1,11 @@
 .wrapper {
     width: 100%;
     top: 0;
-    position: sticky;
-    background-color: white;
+    position: fixed;
     display: flex;
     z-index: 1;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    transition: 0.2s;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .logowrapper {
@@ -13,7 +13,7 @@
     background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
-    height: 60px;
+    height: 80px;
     width: max-content;
     margin-right: auto;
     width: 200px;
@@ -31,11 +31,12 @@
 .item {
     display: flex;
     align-items: center;
-    height: 60px;
+    height: 80px;
     padding: 0 50px;
     margin: 2px;
     cursor: pointer;
     border-bottom: 3px solid transparent;
+    transition: border-bottom 0.2s
 }
 
 .item:hover {
