--- a/components/Cart/Cart.module.css
+++ b/components/Cart/Cart.module.css
@@ -8,10 +8,10 @@
 .cartHeader{
     display: flex;
     align-items: center;
+    height: 80px;
 }
 
 .itemWrapper{
-    height: 100%;
     padding: 10px;
     overflow: auto;
 }
@@ -19,7 +19,11 @@
 .cartFooter{
     display: flex;
     flex-direction: column;
-    padding: 10px
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    border-top: 1px solid rgba(0,0,0,0.3);
 }
 
 .buttonWrapper{
